--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /node_modules
 /public/hot
+/public/storage
 /storage/*.key
 /vendor
 /.idea
@@ -12,4 +13,3 @@ npm-debug.log
 yarn-error.log
 .env
 .phpunit.result.cache
-
